<resources>
    <string name="app_name">CoffeeTime</string>
    <string name="app_name_splash">Coffee Time</string>


    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="facebook_application_id" translatable="false">1918159491760571</string>
    <string name="facebook_login_protocol_scheme" translatable="false">6d54ab3d65d4b9c0a13a768469c270c6</string>
    <string name="twitter_consumer_key" translatable="false">rfosAWHO9cQNrIUP910j8HYOg</string>
    <string name="twitter_consumer_secret" translatable="false">rZvALWnJ19qV0J6jMgP7fOi8fNwHhoBZwKijCnkRms2V9eMhO6</string>
    <string name="google_place_api_key">AIzaSyD_l3WeHf0w1YjcLjGDG1jaG-w_ap3Aq3U</string>
    <string name="tos_url">www.cesarcorona.com.mx</string>
    <string name="sign_in_cancelled">Cancel</string>
    <string name="no_internet_connection">no red available</string>
    <string name="unknown_error">error desconocido</string>
    <string name="cafe">Coffee Time</string>
    <string name="merienda">Meals</string>
    <string name="title_activity_coffe_time_activiy">CoffeTimeActiviy</string>
    <string name="current_position">You are here</string>
    <string name="favorite_place">Favourite place</string>
    <string name="set_your_coffee_time">Set your coffee time</string>
    <string name="when">When?</string>
    <string name="time">Time?</string>
    <string name="warning">set time and date is needed</string>
    <string name="what_do_you_want_to_eat">What do you want to eat?</string>
    <string name="selected_category">at least a selected category is required</string>
    <string name="selected_topic">at least a selected topic is required</string>
    <string name="what_topic_do_you_prefer">what topic do you prefer?</string>
    <string name="search">Searching</string>
    <string name="splash_sub">its all About meeting new friends</string>
    <string name="place_Selected">You need to select a place from map to continue</string>
    <string name="topic">Topic?</string>
    <string name="please_wait">Please wait...</string>
    <string name="set_your_date_and_time">set your date\n and time</string>
    <string name="set_your_location">set your location</string>
    <string name="set_your_topic">set your topic</string>
    <string name="please_wait_d">Please wait...</string>
    <string name="start_searching">Start searching</string>
    <string name="title_activity_main_settings">MainSettingsActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="about_us">About us</string>
    <string name="contact_us">Contact us</string>
    <string name="support">Support</string>
    <string name="q_a"><![CDATA[Q&A]]></string>
    <string name="enter_message">Please enter a message first!</string>
    <string name="chats">Chats</string>
    <string name="this_is_a_test_review_if_you_can_se_this_something_was_wrong_contact_to_contacto_cesarcorona_com_mx">This is a test review, if you can se this something was wrong contact to contacto@cesarcorona.com.mx</string>
    <string name="my_reviews">My Reviews</string>
    <string name="my_dates">My Dates</string>
    <string name="connect">Connect</string>
    <string name="rate_this_date">Rate this Date</string>
    <string name="leave_your_comments">leave your comments</string>
    <string name="set_your_prefered_meal">SET YOUR \nPREFERED MEAL</string>
    <string name="gps_network_not_enabled">Your network is not enabled</string>
    <string name="open_location_settings">Turn your location </string>
    <string name="Cancel">Action canceled</string>
    <string name="logout">Logout</string>
    <string name="select_a_topic">Select a topic</string>
    <string name="set_people_in_party">set people in party</string>
    <string name="topic_selected">Topic selected:</string>
    <string name="people_party">People in your party:</string>
    <string name="place_selected">Place selected:</string>
    <string name="people">people</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="no_matches_found_right_now_your_coffee_date_was_reserved">No matches found right now, your coffee date was reserved</string>
    <string name="cancel_date">Cancel date</string>
    <string name="coffe_time_complete">Coffe Date Complete, you can chat now</string>
    <string name="chat_complete">Coffee Date complete, now you can chat</string>
    <string name="people_in_your_party">People in your party?</string>
    <string name="new_match">Coffe Time Match</string>
    <string name="new_match_body">New coffee date was found, check your dates</string>
    <string name="new_message_title">New message</string>
    <string name="new_message_body">New message in chats</string>

</resources>


