<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:title="@string/settings">

        <menu>

            <item
                android:id="@+id/nav_chat"
                android:icon="@drawable/ic_chat_black_24dp"
                android:title="@string/chats" />
            <item
                android:id="@+id/nav_reviews"
                android:icon="@drawable/ic_grade_black_36dp"
                android:title="@string/my_reviews" />

            <item
                android:id="@+id/nav_dates"
                android:icon="@drawable/ic_chat_black_24dp"
                android:title="@string/my_dates" />

            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/about_us" />
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/nav_support"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/support" />
            <item
                android:id="@+id/nav_q_a"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/q_a" />
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_exit_to_app_black_36dp"
                android:title="@string/logout" />


        </menu>
    </item>

</menu>
