<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mx.com.cesarcorona.coffeetime.activities.CoffeTimeActiviy">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        xmlns:app="http://schemas.android.com/apk/res-auto">


        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <android.support.v7.widget.Toolbar
                    style="@style/MyToolbarStyle"
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    />

                <TextView
                    style="@style/TextViewComicSans"
                    android:layout_centerInParent="true"
                    android:visibility="visible"
                    android:layout_marginLeft="10dp"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#FFF"
                    android:text="@string/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="?attr/actionBarSize" />



            </RelativeLayout>




        </android.support.design.widget.AppBarLayout>




        <LinearLayout
            android:layout_marginTop="20dp"
            android:background="@drawable/speech"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:paddingLeft="50dp"
            android:paddingRight="30dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewComicSans"
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:keepScreenOn="true"
                android:text="@string/set_your_coffee_time"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>



        <TextView
            style="@style/TextViewComicSans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:keepScreenOn="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/when"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <EditText
                android:id="@+id/date_text"
                android:editable="false"
                android:inputType="none"
                android:background="@drawable/black_rounded"
                android:gravity="center"
                android:layout_width="150dp"
                android:layout_height="50dp" />
            <ImageView
                android:id="@+id/date_selector"
                android:layout_marginLeft="20dp"
                android:src="@drawable/ic_date_range_black_48dp"
                android:layout_width="48dp"
                android:layout_height="48dp" />

        </LinearLayout>

        <TextView
            style="@style/TextViewComicSans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:keepScreenOn="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/time"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <EditText
                android:id="@+id/time_text"
                android:editable="false"
                android:inputType="none"
                android:background="@drawable/black_rounded"
                android:gravity="center"
                android:layout_width="150dp"
                android:layout_height="50dp" />
            <ImageView
                android:id="@+id/time_selector"
                android:layout_marginLeft="20dp"
                android:src="@drawable/clock"
                android:layout_width="48dp"
                android:layout_height="48dp" />

        </LinearLayout>

        <TextView
            style="@style/TextViewComicSans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:keepScreenOn="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/topic"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Spinner
                android:layout_alignParentLeft="true"
                android:id="@+id/categorySpinner"
                android:layout_width="200dp"
                android:layout_marginTop="10dp"
                android:minWidth="150dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="60dp"
                android:layout_height="40dp">

            </Spinner>



        </RelativeLayout>






    </LinearLayout>

    <RelativeLayout

        android:background="#44000000"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <ImageView
            android:src="@drawable/ic_home_black_36dp"
            android:layout_marginLeft="20dp"
            android:layout_alignParentLeft="true"
            android:tint="#FFF"
            android:id="@+id/home_icon"
            android:padding="5dp"
            android:layout_width="48dp"
            android:layout_height="match_parent" />

        <ImageView
            android:src="@drawable/ic_arrow_forward_black_36dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:tint="#FFF"
            android:id="@+id/next_icon"
            android:padding="5dp"
            android:layout_width="48dp"
            android:layout_height="match_parent" />


    </RelativeLayout>





</RelativeLayout>
