<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mx.com.cesarcorona.coffeetime.activities.CoffeTimeActiviy">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        xmlns:app="http://schemas.android.com/apk/res-auto">


        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_cofee"
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            card_view:cardMaxElevation="20dp"
            card_view:cardBackgroundColor="@color/color_spash"
            android:layout_height="80dp"
            card_view:cardElevation="15dp"
            card_view:cardCornerRadius="4dp">


            <LinearLayout
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:keepScreenOn="true"
                    android:text="@string/set_your_coffee_time"
                    android:textColor="#77e5f5"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:keepScreenOn="true"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/when"
            android:textColor="@color/color_spash"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <EditText
                android:id="@+id/date_text"
                android:editable="false"
                android:inputType="none"
                android:background="@drawable/black_rounded"
                android:gravity="center"
                android:layout_width="150dp"
                android:layout_height="50dp" />
            <ImageView
                android:id="@+id/date_selector"
                android:layout_marginLeft="20dp"
                android:src="@drawable/ic_date_range_black_48dp"
                android:layout_width="48dp"
                android:layout_height="48dp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:keepScreenOn="true"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/time"
            android:textColor="@color/color_spash"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <EditText
                android:id="@+id/time_text"
                android:editable="false"
                android:inputType="none"
                android:background="@drawable/black_rounded"
                android:gravity="center"
                android:layout_width="150dp"
                android:layout_height="50dp" />
            <ImageView
                android:id="@+id/time_selector"
                android:layout_marginLeft="20dp"
                android:src="@drawable/ic_access_time_black_48dp"
                android:layout_width="48dp"
                android:layout_height="48dp" />

        </LinearLayout>






    </LinearLayout>

    <RelativeLayout

        android:background="#44000000"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <ImageView
            android:src="@drawable/ic_home_black_36dp"
            android:layout_marginLeft="20dp"
            android:layout_alignParentLeft="true"
            android:tint="#FFF"
            android:id="@+id/home_icon"
            android:padding="5dp"
            android:layout_width="48dp"
            android:layout_height="match_parent" />

        <ImageView
            android:src="@drawable/ic_arrow_forward_black_36dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:tint="#FFF"
            android:id="@+id/next_icon"
            android:padding="5dp"
            android:layout_width="48dp"
            android:layout_height="match_parent" />


    </RelativeLayout>





</RelativeLayout>


